[gd_scene load_steps=7 format=3 uid="uid://degcs2m72oyvn"]

[ext_resource type="Script" path="res://scenes/autoloads/scene_manager.gd" id="1_6kya2"]
[ext_resource type="Theme" uid="uid://bvbefu2r37b7v" path="res://resources/tinyalch_main_theme.tres" id="2_o0j5a"]
[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="3_yxjkh"]

[sub_resource type="Animation" id="Animation_vfepe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bmhpn"]
resource_name = "fade_in"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wq2w3"]
_data = {
"RESET": SubResource("Animation_vfepe"),
"fade_in": SubResource("Animation_bmhpn")
}

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_6kya2")

[node name="Transition" type="CanvasLayer" parent="."]
layer = 100

[node name="ColorRect" type="ColorRect" parent="Transition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
libraries = {
"": SubResource("AnimationLibrary_wq2w3")
}

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="PauseMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_o0j5a")
script = ExtResource("3_yxjkh")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -58.0
offset_right = 43.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="PauseMenu/Control/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Control/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Label" type="Label" parent="PauseMenu/Control/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Paused"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/Control/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Control/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ButtonsContainer" type="VBoxContainer" parent="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer/ButtonsContainer"]
layout_mode = 2
text = "Resume
"

[node name="RestartLevel" type="Button" parent="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer/ButtonsContainer"]
layout_mode = 2
text = "Restart
"

[node name="Quit" type="Button" parent="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer/ButtonsContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer/ButtonsContainer/Resume" to="PauseMenu/Control" method="_on_resume_pressed" flags=18]
[connection signal="pressed" from="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer/ButtonsContainer/RestartLevel" to="PauseMenu/Control" method="_on_restart_level_pressed" flags=18]
[connection signal="pressed" from="PauseMenu/Control/VBoxContainer/PanelContainer/MarginContainer/ButtonsContainer/Quit" to="PauseMenu/Control" method="_on_quit_pressed" flags=18]
